<resources>
    <string name="app_name">MediConnect</string>
    <string name="text1">MediConnect</string>
    <string name="text2">Easily find nearby doctors and book appointments</string>
    <string name="text3">Choose Register Option</string>
    <string name="text4">Welcome</string>
    <string name="button1">User</string>
    <string name="button2">Doctors</string>
    <string name="text5">User Register</string>
    <string name="text6">Doctors Register</string>
    <string name="text7">First Name</string>
    <string name="text8">Last Name</string>
    <string name="text9">Email</string>
    <string name="text10">Password</string>
    <string name="text11">Confirm Password</string>
    <string name="text12">Specialization</string>
    <string name="text13">Hospital</string>
    <string name="button3">User Register</string>
    <string name="text15">Already have an account? </string>
    <string name="text16">Doctors Login</string>
    <string name="text17">User Login</string>
    <string name="button4">Login</string>
    <string name="text19">Don\'t have an account?</string>
    <string name="text20">Already have an account? Login</string>
    <string name="text21">Mobile Number (eg:0751111111)</string>
    <string name="text22">Register</string>
    <string name="text23">Verification Code</string>
    <string name="text24">Get Code</string>
    <string name="text26">Find Nearby Doctors</string>
    <string name="text25">Book Appointments</string>
    <string name="text27">🔎  Enter City Now</string>
    <string name="text29">Advance</string>
    <string name="text28">Details</string>
    <string name="text30">Support</string>
    <string name="text31">My Appointments</string>
    <string name="text32">Availability Time Today</string>
    <string name="text33">About</string>
    <string name="text34">Find Location</string>
    <string name="text35">Location</string>
    <string name="text36">User Profile</string>
    <string name="text37">Update Profile</string>
    <string name="text38">Dr.Dewanga Theekshana</string>
    <string name="text39">Time : 09.30PM</string>
    <string name="text40">Date : 2025/03/20</string>
    <string name="title_activity_patients_home_page">PatientsHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="docter_home_welcome_text">Welcome!!</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Appointment</string>
    <string name="menu_appointments">Profile</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_search">Doctors</string>
    <string name="title_appointments">Appointments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>