<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="lk.oodp2.mediconnect01.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="lk.oodp2.mediconnect01.ui.search.AdvanceSearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_advance_search" />

    <fragment
        android:id="@+id/navigation_appointments"
        android:name="lk.oodp2.mediconnect01.ui.Appointments.AppointmentsFragment"
        android:label="@string/title_appointments"
        tools:layout="@layout/fragment_appointments" />
</navigation>