<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view11"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shadow_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text39"
        app:layout_constraintBottom_toBottomOf="@+id/view12"
        app:layout_constraintStart_toEndOf="@+id/imageView20" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxWidth="200dp"
        android:singleLine="true"
        android:text="@string/text38"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/view12" />

    <View
        android:id="@+id/view12"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shadow_box"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="@+id/view12"
        app:layout_constraintStart_toStartOf="@+id/view12"
        app:layout_constraintTop_toTopOf="@+id/view12"
        app:srcCompat="@drawable/docterregistationlogo2" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text40"
        app:layout_constraintBottom_toBottomOf="@+id/textView42"
        app:layout_constraintStart_toEndOf="@+id/textView42"
        app:layout_constraintTop_toTopOf="@+id/textView42" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/Doctors_Button"
        android:text="Find"
        app:layout_constraintBottom_toBottomOf="@+id/textView43"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/textView41" />

</androidx.constraintlayout.widget.ConstraintLayout>